fixing CT logo on mobile

--- a/src/components/clientLogos/clientLogos.module.css
+++ b/src/components/clientLogos/clientLogos.module.css
@@ -18,8 +18,7 @@
 }
 
 .ct {
-  max-height: 25px;
-  padding-top: 25px;
+  max-height: 27px;
 }
 
 .dcypher {
